# rocketapp

./: .env  Cargo.toml  LICENSE  README.md  northwind.db
src/: main.rs
templates/: Rocket.toml  base.tera  categories.tera  customers.tera  index.tera  products.tera
